Bug 338642 - Chart type line doesn't adjust minimum value on graph if the report is older than 4 months.
Summary: Chart type line doesn't adjust minimum value on graph if the report is older ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.6
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 383161 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-28 23:46 UTC by Erik Boritsch
Modified: 2018-03-28 08:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments
Line chart older than 3 months, graph starts at 0. (233.26 KB, image/png)
2014-09-29 22:35 UTC, Erik Boritsch
Details
Time frame <= 4 months, graph starts at next lowest value. (241.03 KB, image/png)
2014-09-29 22:38 UTC, Erik Boritsch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Boritsch 2014-08-28 23:46:06 UTC
If create a line chart which shows the amount of my liabilities for each day and the "from" date is less than 4 months, then the minimum value on "Y" axis on the graph is adjusted to the previous thousand. 

E.g. if I have a minimum of 9500 within the timeframe the graph starts at 9000.

If I select a timeframe of more than 4 months, e.g. 1.04. till today then the graph starts at 0 and is somewhat clogged at the top for larger sums.

Reproducible: Always
Comment 1 Cristian Oneț 2014-08-31 18:47:25 UTC
Could you add a screenshot? it would make things easier, we would know what to look for.
Comment 2 Cristian Oneț 2014-09-23 13:24:10 UTC
On second thought the description is pretty straight forward but I'm not sure that we can control this behavior (maybe it's in KDChart - I need to take a look at it).
Comment 3 Erik Boritsch 2014-09-29 22:35:02 UTC
Created attachment 88889 [details]
Line chart older than 3 months, graph starts at 0.

A sample line graph, timeframe is longer than 4 months, Y axis starts at 0.

Sorry, I've missed your reply. Adding screenshots anyway
Comment 4 Erik Boritsch 2014-09-29 22:38:41 UTC
Created attachment 88891 [details]
Time frame <= 4 months, graph starts at next lowest value.

Changed the timeframe to be exactly 4 months for comparison with the same pseudo-liabilities graph. Note that the graph starts higher now which should be the desired output.
Comment 5 wojnilowicz 2017-04-12 15:49:04 UTC
Please attach .kmy file showing the problem.
Comment 6 wojnilowicz 2017-04-17 13:00:44 UTC
Git commit 6bf10ae89f748337a60cb995080907ed5b5698aa by Łukasz Wojniłowicz.
Committed on 17/04/2017 at 12:59.
Pushed by wojnilowicz into branch 'master'.

Reset graph size before redraw
FIXED-IN:5.0

Differential Revision: https://phabricator.kde.org/D5477

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +5    -3    kmymoney/reports/kreportchartview.cpp

https://commits.kde.org/kmymoney/6bf10ae89f748337a60cb995080907ed5b5698aa
Comment 7 wojnilowicz 2017-08-05 19:05:00 UTC
*** Bug 383161 has been marked as a duplicate of this bug. ***