Reset graph size before redraw

BUG:338642
FIXED-IN:5.0

Differential Revision: https://phabricator.kde.org/D5477

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>